// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> in android environment. should dispatch navigation action 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "params": Object {
            "existingPin": true,
          },
          "routeName": "routeName",
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`<App/> in android environment. should redirect to lockSelectionRoute screen if user has no existing pin ands pressed back button from lockPinSetup screen  1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "routeName": "LockSelection",
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`<App/> in android environment. should redirect to settingsTab screen if user has pressed back button from lockPinSetup screen if user has already setup  1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "routeName": "TabSettings",
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`<App/> in ios environment. should render properly and snapshot should match 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onNavigationStateChange={[Function]}
  />
</View>
`;
